# safe2share-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.ollama.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  policy.md
src/safe2share/: __init__.py  api.py  cli.py  config.py  logconfig.py  main.py  models.py  providers.py  service.py
src/safe2share/analyzers/: auto_combined.py  base.py  llm_openai_compat.py  openai_analyzer.py  prompts.py  rule_based.py
src/safe2share/scripts/: serve.py
src/safe2share/static/: app.js  styles.css
src/safe2share/templates/: index.html
tests/: test_auto_mode.py  test_rule_based.py  test_rule_based_samples.py  test_service.py  test_service_provider.py
tests/fixtures/: samples.json
